Solving Spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1063,8 +1063,8 @@ screen and (-ms-high-contrast: none) {
 
 
 .basic-2 {
-	padding-top: 3.5rem;
-	padding-bottom: 2.75rem;
+	/* padding-top: 3.5rem;
+	padding-bottom: 2.75rem; */
 	background-color: #fbf9f5;
 }
 
@@ -1215,8 +1215,8 @@ screen and (-ms-high-contrast: none) {
 
 
 .basic-4 {
-	padding-top: 4rem;
-	padding-bottom: 3rem;
+	/* padding-top: 4rem;
+	padding-bottom: 3rem; */
 	background-color: #fbf9f5;
 	text-align: center;
 }
@@ -1314,8 +1314,8 @@ screen and (-ms-high-contrast: none) {
 }
 
 .br-cards {
-	padding-top: 3rem;
-	padding-bottom: 2rem;
+	/* padding-top: 3rem;
+	padding-bottom: 2rem; */
 	background-color: #fbf9f5;
 }
 
@@ -1371,7 +1371,7 @@ screen and (-ms-high-contrast: none) {
 }
 
 .slider-2 {
-	padding-top: 2.5rem;
+	/* padding-top: 2.5rem; */
 	padding-bottom: 4rem;
 	background-color: #fbf9f5;
 }
@@ -1512,8 +1512,8 @@ screen and (-ms-high-contrast: none) {
 }
 
 .form-3 {
-	padding-top: 6.0rem;
-	/* padding-bottom: 5.125rem; */
+	padding-top: 9.0rem;
+	padding-bottom: 2.125rem;
 	background-color: #1a4c70;
 }
 
@@ -1959,10 +1959,10 @@ a:hover.back-to-top {
 		height: 95%;
 	}
 
-	.basic-2 {
-		/* padding-top: 4.5rem; */
+	/* .basic-2 {
+		padding-top: 4.5rem; 
 		padding-bottom: 3.5rem
-	}
+	} */
 
 	.basic-3 {
 		padding-top: 3.5rem;
@@ -1990,15 +1990,15 @@ a:hover.back-to-top {
 	}
 
 	.basic-4 {
-		padding-top: 4.5rem;
-		padding-bottom: 3.5rem;
+		/* padding-top: 4.5rem; 
+		padding-bottom: 3.5rem; */
 		text-align: center;
 	}
 
-	.br-cards {
+	/* .br-cards {
 		padding-top: 3.5rem;
 		padding-bottom: 3rem;
-	}
+	} */
 
 	.br-cards .card {
 		display: inline-block;
@@ -2010,11 +2010,11 @@ a:hover.back-to-top {
 	/* .br-cards .card:nth-child(3n+2) {
 		margin-right: 2rem;
 		margin-left: 2rem;
-	} */
-
+	} 
+	
 	.slider-2 {
 		padding-bottom: 9rem;
-	}
+	} */
 
 	.slider-2 h3 {
 		width: 37.5rem;
